@@ -1,0 +1,69 @@
+je_new_dynasty = {
+	icon = "gfx/interface/icons/event_icons/ming.dds"
+	group = je_group_historical_content
+	scripted_button = china_ming_button
+	scripted_button = china_shun_button
+	scripted_button = china_han_button
+	scripted_button = china_later_jin_button
+	scripted_button = china_qing_button
+	is_shown_when_inactive = {
+		exists = c:CHI
+		c:CHI = root
+		has_law = law_type:law_monarchy
+		is_revolutionary = yes
+	}
+	possible = {
+		exists = c:CHI
+		c:CHI ?= this
+		has_law = law_type:law_monarchy
+		is_revolutionary = yes
+	}
+	immediate = {
+		if = {
+			limit = {
+				has_variable = china_ming
+			}
+			remove_variable = china_ming
+		}
+		if = {
+			limit = {
+				has_variable = china_shun
+			}
+			remove_variable = china_shun
+		}
+		if = {
+			limit = {
+				has_variable = china_later_jin
+			}
+			remove_variable = china_later_jin
+		}
+		if = {
+			limit = {
+				has_variable = china_han
+			}
+			remove_variable = china_han
+		}
+	}
+	should_be_pinned_by_default = yes
+	weight = 200
+	complete = {
+		custom_tooltip = {
+			text = je_new_dynasty_complete_tt
+			OR = {
+				has_variable = china_ming
+				has_variable = china_shun
+				has_variable = china_later_jin
+				has_variable = china_han
+				has_variable = china_qing
+			}
+		}
+	}
+	fail = {
+		OR = {
+			NOT = {
+				has_law = law_type:law_monarchy
+			}
+			is_revolutionary = no
+		}
+	}
+}
