@@ -154,3 +154,16 @@
   je_great_yuan: "Glory of the Great Khan"
   mongol_yuan_tt: "#bold Great Yuan#! will be established"
   je_great_yuan_reason: "The Great Khan's country has finally gained its independence, and we should lose no time in recreating the glory of the Khan."
+  je_new_dynasty: "A New Dynasty"
+  je_new_dynasty_reason: "The [ROOT.GetCountry.GetName] that has risen up has succeeded in seizing a lot of land and is now taking shape, should we overthrow the corrupt old dynasty or just fulfill our demands?"
+  je_new_dynasty_complete_tt: "The name of the country has been chosen."
+  china_ming: "#bold Great Ming#!"
+  china_ming_desc: "Restore the Ming Dynasty"
+  china_qing: "#bold Just fulfill our demands#!"
+  china_qing_desc: "The Qing Dynasty is still the best choice"
+  china_shun: "#bold Great Shun#!"
+  china_shun_desc: "We are the heirs of the Dashing King."
+  china_han: "#bold Great Han#!"
+  china_han_desc: "Restore the Han dynasty"
+  china_later_jin: "#bold Later Jin#!"
+  china_later_jin_desc: "We are the ones who are the real Jurchen!"
