@@ -87,3 +87,7 @@
  moh_Luvsantuvdenchoyjijaltsan: "Luvsantuvdenchoyjijaltsan" #6th
  moh_Agvaanchoyjivanchugperenlaijamts: "Agvaanchoyjivanchugperenlaijamts" #7th
  moh_Agvaanluvsanchoyjindanzanvaanchigbalsambuu: "Agvaanluvsanchoyjindanzanvaanchigbalsambuu" #8th
+
+ Shugui: "Shugui"
+ Chengduan: "Chengduan"
+ Yuxun: "Yuxun"
