@@ -321,3 +321,7 @@
   opium_wars_moh.1.f: "在禁毒通令发布后，各级政府迅速响应，纷纷成立禁烟禁毒委员会，展开了大规模的禁毒行动。[ROOT.GetCountry.GetName]广泛动员群众，特别强调对贩毒人员的检举与揭发。针对毒品的种植、运输、制造、贩卖和吸食等环节，政府采取了“力劝两头，断斩中间”的策略，劝导吸毒者停止吸食，强制铲除种植者，同时重点打击流通环节。\n\n这使得罂粟种植者难以出售，吸毒者也难以购买，除了边疆少数民族地区和偏远山区仍有零星种植外，全国大部分地区逐渐实现了禁种。"
   opium_wars_moh.1.a: "“他家也藏有鸦片！”"
   opium_wars_moh.1.b: "经济也要跟上"
+  warlord_china_events.500.t: "揭竿而起"
+  warlord_china_events.500.d: "我们已经起义，接下来还有很多事要处理。"
+  warlord_china_events.500.f: "揭竿而起的[ROOT.GetCountry.GetName]已成功夺取很多土地，目前已初具规模，我们应该推翻腐朽的旧王朝，还是只完成我们的诉求？"
+  warlord_china_events.500.a: "拟定国号"
