@@ -155,3 +155,16 @@
   je_great_yuan: "大汗的荣光"
   mongol_yuan_tt: "成立#bold 大元#!"
   je_great_yuan_reason: "大汗的国家终于获得独立，我们应不失时机，重现大汗的荣光。"
+  je_new_dynasty: "崭新的王朝"
+  je_new_dynasty_reason: "揭竿而起的[ROOT.GetCountry.GetName]已成功夺取很多土地，目前已初具规模，我们应该推翻腐朽的旧王朝，还是只完成我们的诉求？"
+  je_new_dynasty_complete_tt: "已经选定国号"
+  china_ming: "#bold 大明#!"
+  china_ming_desc: "复明"
+  china_qing: "#bold 只完成我们的诉求#!"
+  china_qing_desc: "保持现状"
+  china_shun: "#bold 大顺#!"
+  china_shun_desc: "闯王的继承人"
+  china_han: "#bold 大汉#!"
+  china_han_desc: "兴复汉室"
+  china_later_jin: "#bold 后金#!"
+  china_later_jin_desc: "我们才是是女真人！"
