@@ -97,3 +97,7 @@
   moh_Luvsantuvdenchoyjijaltsan: "罗桑图旦却吉坚赞" #6th
   moh_Agvaanchoyjivanchugperenlaijamts: "阿旺曲吉旺楚钦列嘉错" #7th
   moh_Agvaanluvsanchoyjindanzanvaanchigbalsambuu: "阿旺垂济尼玛丹彬旺舒克" #8th
+
+  Shugui: "书桂"
+  Chengduan: "诚端"
+  Yuxun: "煜勋"
