@@ -52,3 +52,10 @@ beta-0.4.1
 
 Changes:
 - You can now ban opium even if you have lost the opium wars. (You should be a council republic)
+
+beta-0.5
+
+Changes:
+- A new dynasty name can be chosen in the civil war (monarchy).
+- Mongolia can become Great Yuan.
+- Changed some province and city names.
